samples/_failures_safe/1761597626_9d4e15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46cbce56.c: In function ‘main’:
./samples/SAFE/__tmp_46cbce56.c:149:12: error: missing terminating " character
  149 |     printf("\nWord
      |            ^~~~~~~
./samples/SAFE/__tmp_46cbce56.c:149:5: error: expected expression at end of input
  149 |     printf("\nWord
      |     ^~~~~~
./samples/SAFE/__tmp_46cbce56.c:149:5: error: expected declaration or statement at end of input
